--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-editor-background",
+	"name": "Editor Background Image",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "This allows you to specify a remote URL as the background image, and an opacity percentage for the background image.",
+	"author": "shmolf",
+	"authorUrl": "https://github.com/shmolf/obsidian-editor-background",
 	"isDesktopOnly": false
 }
