--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-editor-background",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "This allows you to specify a remote URL as the background image, and an opacity percentage for the background image.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": ["obsidian", "plugin", "background", "image", "opacity, remote url"],
+	"author": "shmolf",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
