fix: last-minute-changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "obsidian-editor-background",
-	"name": "Editor Background Image",
+	"id": "background-image",
+	"name": "Background Image",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This allows you to specify a remote URL as the background image, and an opacity percentage for the background image.",
+	"description": "This allows you to specify a remote URL as the background image, and a few settings to tweak the experience.",
 	"author": "shmolf",
 	"authorUrl": "https://github.com/shmolf/obsidian-editor-background",
 	"isDesktopOnly": false
