--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "This allows you to specify a remote URL as the background image, and a few settings to tweak the experience.",
 	"author": "shmolf",
-	"authorUrl": "https://github.com/shmolf/obsidian-editor-background",
+	"authorUrl": "https://github.com/shmolf",
 	"isDesktopOnly": false
 }
